--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.3.1",
     "next": "13.4.19",
     "node": "^20.6.0",
     "postcss": "8.4.29",
