--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/babel__core": "^7.20.2",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
