--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/babel__core": "^7.20.2",
+    "@types/jest": "^29.5.5",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-testing-library": "^6.0.2",
